2007-01-14  Hans Breuer  <hans@breuer.org>

        * plug-ins/script-fu/tinyscheme/scheme.[ch] : to make it compile with
        msvc redefine stricmp after including <string.h> and protect gccism
        #warning with #ifdef __GNUC__, also some more exports
	* plug-ins/script-fu/scheme-wrapper.c : simple 'extern' does not work
	to get variables across modules boundaries for msvc, use SCHEME_EXPORT
	Together fixes bug #396268

2007-01-13  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated
	* app/display/gimpdisplay-handlers.c : #include "file/file-utils.h"
	for file_utils_uri_display_name
	* plug-ins/imagemap/imap_statusbar.c : g_snprintf instead of snprintf

2007-01-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/displace.c
	* plug-ins/common/tileit.c
	* plug-ins/script-fu/scripts/news-text.scm: fixed typos (bug #396169).

2007-01-13  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpaspectpreview.c: implement GimpPreview's transform()
	and untransform() methods.

2007-01-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c
	* app/widgets/gimpthumbbox.[ch]: save some string copies by
	changing gimp_thumb_box_set_uri() to gimp_thumb_box_take_uri().

2007-01-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c: applied patch from Robert Krawitz
	that adds HSL support (bug #395928).

2007-01-12  Michael Natterer  <mitch@gimp.org>

	* app/vectors/gimpanchor.[ch]: renamed gimp_anchor_duplicate()
	to gimp_anchor_copy().

	* app/vectors/gimpstroke.c (gimp_stroke_real_duplicate): changed
	accordingly.

2007-01-12  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdashpattern.[ch]: register GIMP_TYPE_DASH_PATTERN
	as boxed type. Added "new" to function names which create dash
	patterns. Changed and renamed GValue functions to functions which
	convert the dash pattern between GArray and GValueArray.

	* app/core/gimpstrokeoptions.c
	* app/widgets/gimpcellrendererdashes.c